# flux

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  justfile  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: lint.yml
.pi/: AGENTS.md  STYLE.md
crates/flux/: Cargo.toml
crates/flux-communication/: Cargo.toml
crates/flux-communication/src/: array.rs  cleanup.rs  error.rs  lib.rs  park.rs  queue.rs  registry.rs  seqlock.rs  shmem_data.rs  timer.rs
crates/flux-communication/src/queue/: collaborative_group.rs  mod.rs  tests_basic.rs  tests_collaborative.rs
crates/flux-ctl/: CHANGELOG.md  Cargo.toml  README.md
crates/flux-ctl/examples/: bench_startup.rs  demo.rs  live.rs  tile_smoke.rs
crates/flux-ctl/src/: discovery.rs  lib.rs  main.rs
crates/flux-ctl/src/discovery/: cli.rs  inspect.rs  mod.rs  registry.rs
crates/flux-ctl/src/tui/: app.rs  mod.rs  render.rs  tile_metrics.rs
crates/flux-ctl/tests/: perf_test.rs  queue_stats_integration.rs  tui_tests.rs
crates/flux-network/: Cargo.toml
crates/flux-network/src/: lib.rs
crates/flux-network/src/tcp/: client.rs  connector.rs  mod.rs  server.rs  stream.rs
crates/flux-network/src/tcp/stream/: framed.rs  mod.rs  raw.rs  send_backlog.rs
crates/flux-network/tests/: tcp_broadcast_burst.rs  tcp_client_server_compat.rs  tcp_client_telemetry.rs  tcp_dcache.rs  tcp_handshake.rs  tcp_multi_client_backpressure.rs  tcp_raw_roundtrip.rs  tcp_raw_stream.rs  tcp_roundtrip.rs
crates/flux-profiler/: Cargo.toml  README.md
crates/flux-profiler-macros/: Cargo.toml
crates/flux-profiler-macros/src/: lib.rs
crates/flux-profiler/examples/: timed_overhead.rs  timed_producer.rs
crates/flux-profiler/src/: drainer.rs  fxt.rs  lib.rs  mark.rs  producer.rs  queue_dir.rs  reader.rs  ring_drainer.rs  socket_clock.rs  symbols.rs  timing.rs
crates/flux-profiler/src/allocator/: counting.rs  mod.rs
crates/flux-profiler/src/perf/: events.rs  mod.rs  raw.rs  sample.rs  source.rs
crates/flux-timekeeper/: Cargo.toml
crates/flux-timekeeper/src/: lib.rs  timekeeper.rs  types.rs
crates/flux-timekeeper/src/data/: bucketed_data.rs  bucketed_data_cache.rs  circular_buffer.rs  mod.rs  statistics.rs  tile_metrics.rs  utils.rs
crates/flux-timekeeper/src/tui/: cycling_list.rs  cycling_table.rs  keyed_cycling_list.rs  mod.rs  plot.rs  plot_settings.rs  render_flags.rs
crates/flux-timing/: Cargo.toml
crates/flux-timing/src/: duration.rs  global_clock.rs  ingestion_time.rs  instant.rs  internal_message.rs  lib.rs  nanos.rs  publish_delta.rs  repeater.rs  tracking_timestamp.rs
crates/flux-utils/: Cargo.toml
crates/flux-utils/benches/: arrayvec.rs  datastore.rs  dcache.rs
crates/flux-utils/src/: arrayvec.rs  assert.rs  datastore.rs  dcache.rs  directories.rs  lib.rs  namespace.rs  shared_vector.rs  tcache.rs  thread.rs  vsync.rs
crates/flux/src/: lib.rs  park.rs  timer.rs
crates/flux/src/persistence/: mod.rs  persistable.rs  persisting_tile.rs
crates/flux/src/spine/: adapter.rs  consumer.rs  mod.rs  scoped.rs  standalone_producer.rs
crates/flux/src/tile/: instr.rs  metrics.rs  mod.rs
crates/flux/tests/: e2e.rs  park.rs  spine.rs  tile_metrics_rusage.rs  type_hash_name.rs
crates/spine-derive/: Cargo.toml
crates/spine-derive/src/: lib.rs
crates/type-hash/: Cargo.toml
crates/type-hash-derive/: Cargo.toml
crates/type-hash-derive/src/: lib.rs
crates/type-hash/src/: lib.rs
