[workspace]
members = [
  "crates/flux",
  "crates/flux-communication",
  "crates/flux-timing",
  "crates/flux-utils",
  "crates/flux-timekeeper",
  "crates/spine-derive",
  "crates/type-hash",
  "crates/type-hash-derive",
  "crates/flux-network"
]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.91.0"
version = "0.1.0"

[workspace.dependencies]
flux = { path = "crates/flux", version = "0.0.35" }
flux-communication = { path = "crates/flux-communication", version = "0.0.25" }
flux-timing = { path = "crates/flux-timing", version = "0.0.14" }
flux-utils = { path = "crates/flux-utils", version = "0.0.22" }
flux-network = { path = "crates/flux-network", version = "0.0.7" }
spine-derive = { path = "crates/spine-derive", version = "0.0.8" }
flux-overseer = { path = "crates/flux-overseer", version = "0.0.11" }
flux-timekeeper = { path = "crates/flux-timekeeper", version = "0.0.29" }
type-hash = { path = "crates/type-hash", version = "0.0.1" }
type-hash-derive = { path = "crates/type-hash-derive", version = "0.0.4" }


auto_impl = "1.2.0"
backtrace = "0.3.73"
shared_memory = "^0.12"
core_affinity = "0.8.1"
directories = "5.0.1"
once_cell = "1.19.0"
libc = "0.2.177"
serde = { features = ["derive"], version = "=1.0.228" }
chrono = { features = ["serde"], version = "0.4.38" }
quanta = "0.12.3"
governor = "0.6.3"
bitcode = { features = ["serde"], version = "0.6.3" }
zstd = "0.13.2"
signal-hook = "0.3.18"
tracing = "0.1.40"
thiserror = "1.0.58"
tinyvec = "1.9.0"
humantime = "2.1"
serde_json = "1.0.135"
ratatui = "0.29.0"
bitflags = { version = "2.6.0", features = ["serde"] }
crossterm = "0.28.1"
strum = { features = ["derive"], version = "0.26.1" }
indexmap = { features = ["serde"], version = "2.11.1" }
wincode = "0.2.5"
wincode-derive = "0.2.3"
mio = { version = "1.1.1", features = ["net", "os-poll"] }
url = "2.5.8"
