[package]
name = "flux-communication"
version = "0.0.25"
edition.workspace = true
rust-version.workspace = true
license = "Apache-2.0 AND MIT"
keywords = ["low-latency", "performance", "communication"]
repository = "https://github.com/gattaca-com/flux"

[dependencies]
flux-timing.workspace = true
flux-utils.workspace = true

directories.workspace = true
once_cell.workspace = true
shared_memory.workspace = true
thiserror.workspace = true
tracing.workspace = true
