[package]
edition.workspace = true
name = "flux-network"
rust-version.workspace = true
version = "0.0.7"
license = "Apache-2.0 AND MIT"
keywords = ["low-latency", "performance", "communication"]
repository = "https://github.com/gattaca-com/flux"

[features]
wincode = ["dep:wincode"]

[dependencies]
flux-communication.workspace = true
flux-timing.workspace = true
flux-utils.workspace = true
mio.workspace = true
tracing.workspace = true
wincode = { workspace = true, optional = true }

[dev-dependencies]
wincode-derive = "*"
wincode = "*"
