[package]
name = "flux-utils"
version = "0.0.22"
edition.workspace = true
rust-version.workspace = true
publish = ["nexus"]

[dependencies]
flux-timing.workspace = true

core_affinity.workspace = true
directories.workspace = true
libc.workspace = true
tracing.workspace = true
serde.workspace = true
wincode = { workspace = true, optional = true }

[dev-dependencies]
criterion = "0.8"
tinyvec = "1.10.0"

[features]
default = []
wincode = ["dep:wincode"]

[[bench]]
name = "arrayvec"
harness = false
