[package]
name = "flux-utils"
version = "0.0.23"
edition.workspace = true
rust-version.workspace = true
license = "Apache-2.0 AND MIT"
keywords = ["low-latency", "performance", "communication"]
repository = "https://github.com/gattaca-com/flux"

[dependencies]
flux-timing.workspace = true
type-hash.workspace = true

thiserror.workspace = true
core_affinity.workspace = true
directories.workspace = true
libc.workspace = true
tracing.workspace = true
serde.workspace = true
rand.workspace = true
spin.workspace = true
wincode = { workspace = true, optional = true }
bytes = { workspace = true, optional = true }

[dev-dependencies]
criterion = "0.8"
tinyvec = "1.10.0"
flux-communication.workspace = true
crossbeam-channel = "0.5"

[features]
default = []
wincode = ["dep:wincode"]
bytes = ["dep:bytes"]

[[bench]]
name = "arrayvec"
harness = false

[[bench]]
name = "dcache"
harness = false

[lints]
workspace = true
