[package]
name = "flux"
version = "0.0.38"
edition.workspace = true
rust-version.workspace = true
license = "Apache-2.0 AND MIT"
keywords = ["low-latency", "performance", "communication"]
repository = "https://github.com/gattaca-com/flux"

[dependencies]
flux-communication.workspace = true
flux-timing.workspace = true
flux-utils.workspace = true
spine-derive.workspace = true
type-hash.workspace = true
type-hash-derive.workspace = true

bitcode.workspace = true
core_affinity.workspace = true
libc.workspace = true
serde.workspace = true
signal-hook.workspace = true
tracing.workspace = true
zstd.workspace = true
wincode = { workspace = true, optional = true }
wincode-derive = { workspace = true, optional = true }

[dev-dependencies]
shared_memory.workspace = true
tempfile.workspace = true

[features]
default = []
# Per-loop instructions-retired + CPU-cycle counting via perf_event + rdpmc,
# emitted on a separate tileperf-{tile} queue. Self-monitoring requires
# kernel.perf_event_paranoid <= 2:
#   sudo sysctl kernel.perf_event_paranoid=2
# (persist via /etc/sysctl.d/). Disabled with a warn at runtime otherwise.
instr-count = []
wincode = [
    "dep:wincode",
    "dep:wincode-derive",
    "flux-utils/wincode",
    "flux-timing/wincode",
]

[lints]
workspace = true

[package.metadata.cargo-machete]
ignored = ["wincode"]
