[package]
name = "spine-derive"
version = "0.0.9"
description = "Attribute macro that auto-generates the boilerplate impls for Spine queues."
edition.workspace = true
rust-version.workspace = true
license = "Apache-2.0 AND MIT"
keywords = ["low-latency", "performance", "communication"]
repository = "https://github.com/gattaca-com/flux"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1"
syn = { version = "2.0.101", features = ["full"] } 
