[package]
name = "type-hash-derive"
version = "0.0.4"
edition = "2021"
license = "Apache-2.0 AND MIT"
keywords = ["low-latency", "performance", "communication"]
repository = "https://github.com/gattaca-com/flux"

[lib]
proc-macro = true

[dependencies]
proc-macro-crate = "3"
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
